# LLM-RAG-Chatbot

./: .env  .gitignore  README.md  compose.yml  model.py  pyproject.toml  save_model.py
app/: config.py  main.py  models.py  schemas.py
app/infrastructure/: document_db.py  models.py  vector_db.py
app/routes/: generate.py  load.py
app/services/: chatbot.py  conversational_model.py  embedding_model.py  rag.py  splitter.py
backend/: Dockerfile  requirements.txt
backend/app/: config.py
backend/app/infrastructure/: vector_db.py
bot_service/: .env  go.mod  go.sum  http_test.go  main.go  make.mk  ranking.go
chainlit_front/: chainlit.md  cl.py  run.sh
database/: chroma.sqlite3  ddl.sql  document_db.db
discord_bot_service/: Dockerfile  config.go  go.mod  go.sum  main.go  ranking.go
gguf_model/: Dockerfile  main.py  requirements.txt
llama3/: Dockerfile  main.py  requirements.txt
model_exploration/: chatbot.ipynb  embedding_model_comparison.ipynb  mixtral.ipynb  nlp_basics.ipynb  rag_postgres.ipynb  reyna.ipynb  umap.ipynb  vector_db_distance.ipynb
model_exploration/database/: chroma.sqlite3
rag/: document_loader.ipynb
ranking_algorithm/: .env  README.md  algorithm.py  main.py  merge_non_recursion.py  merge_sort.py  metrics.ipynb  models.py  players.csv  players_old.csv  ranking.db  short_tournament_sort.py  sql_query.ipynb  tournament_sort.py
ranking_algorithm/test/: animes.csv  test_tournament.py
tests/: chroma.sqlite3  ow.txt  test_pdf_reader.py
tests/vector_db/: a.txt  test_vector_db_test.py
umap/: auto_umap.ipynb  auto_umap.py  ow2.html
(+4 files in other folders)
