[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["tomaszbk-pc <zubik.tomas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.26.0"
torch = "^2.1.2"
transformers = "^4.36.2"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
