[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["tomaszbk-pc <zubik.tomas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.26.0"
torch = "^2.1.2"
transformers = "^4.36.2"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
loguru = "^0.7.2"
python-multipart = "^0.0.9"
langchain = "^0.1.7"
pypdf = "^4.0.1"
chromadb = "^0.4.22"
sqlmodel = "^0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "I",
    "SIM",
    "UP",
]


line-length = 100

lint.ignore = [
    "E501", # line too long, handled by format
    "B008", # do not perform function calls in argument defaults
    "F401",
]
fix = true
show-fixes = true


# [tool.pytest.ini_options]
# python_files ="test*.py"
# testpaths = [
#     "tests"
# ]
